added a little bootstrap

--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
         <!-- main landing or jumbotron -->
         <section class="jumbotron" style="margin-top: 50px;">
             <h1 class="title">About Me</h1>
-            <div class="about-me">
-                <img src="" alt="">
+            <div class="about-me d-flex">
+                <img src="/assets/images/me.jpg" alt="picture of Tom">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus numquam necessitatibus at qui
                     ipsam harum, adipisci dolor a, debitis nisi saepe ipsum corporis aut quidem excepturi voluptatem
-                    quibusdam ea ex!</p>
+                    quibusdam ea ex! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laudantium
+                    illo, itaque officiis soluta aliquam atque error alias provident nobis temporibus facilis explicabo
+                    odit veritatis minima doloribus voluptatum, voluptatem recusandae. Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit. Quisquam libero quia quis nam id incidunt ad facere. Architecto
+                    repudiandae nostrum dolores at. Soluta aspernatur quisquam molestiae ipsam dolore nisi inventore.
+                </p>
             </div>
         </section>
 
