--- a/index.html
+++ b/index.html
@@ -8,38 +8,48 @@
     <link rel="stylesheet" href="/assets/styles/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/styles/style.css">
 
-    <title>Document</title>
+    <title>Tom Ruff Portfolio</title>
 </head>
 
 <body style="background-image: url('assets/images/white-painted-wall-1939485.jpg');">
-    <div class="container">
-
+    <div class="container-fluid">
         <!-- Nav section -->
-        <nav class="navbar p-3 border bg-light">
-            <h1 class="navbar-brand p-3 mb-2 bg-info text-white">Tom Ruff</h1>
-            <ul class="nav justify-content-end">
-                <li class="nav-item"><a class="nav-link" href="#">About Me</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
-            </ul>
-        </nav>
+        <div class="row justify-content-center ">
 
+            <nav class="navbar col-md-8 p-3 border bg-light">
+
+                <h1 class="navbar-brand p-3 mb-2 bg-info text-white">Tom Ruff</h1>
+                <ul class="nav justify-content-end">
+                    <li class="nav-item"><a class="nav-link" href="#">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+                </ul>
+            </nav>
+        </div>
 
         <!-- main landing or jumbotron -->
-        <section class="jumbotron" style="margin-top: 50px;">
-            <h1 class="title">About Me</h1>
-            <div class="about-me d-flex">
-                <img src="/assets/images/me.jpg" alt="picture of Tom">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus numquam necessitatibus at qui
-                    ipsam harum, adipisci dolor a, debitis nisi saepe ipsum corporis aut quidem excepturi voluptatem
-                    quibusdam ea ex! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laudantium
-                    illo, itaque officiis soluta aliquam atque error alias provident nobis temporibus facilis explicabo
-                    odit veritatis minima doloribus voluptatum, voluptatem recusandae. Lorem ipsum dolor sit amet,
-                    consectetur adipisicing elit. Quisquam libero quia quis nam id incidunt ad facere. Architecto
-                    repudiandae nostrum dolores at. Soluta aspernatur quisquam molestiae ipsam dolore nisi inventore.
-                </p>
+        <section class=" row justify-content-center" style="margin-top: 50px;">
+            <div class="jumbotron col-md-8 ">
+                <h1 class="title">About Me</h1>
+                <div class="about-me d-flex">
+                    <img src="/assets/images/me.jpg" alt="picture of Tom">
+                    <p class="about-me-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+                        numquam necessitatibus at
+                        qui
+                        ipsam harum, adipisci dolor a, debitis nisi saepe ipsum corporis aut quidem excepturi voluptatem
+                        quibusdam ea ex! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laudantium
+                        illo, itaque officiis soluta aliquam atque error alias provident nobis temporibus facilis
+                        explicabo
+                        odit veritatis minima doloribus voluptatum, voluptatem recusandae. Lorem ipsum dolor sit amet,
+                        consectetur adipisicing elit. Quisquam libero quia quis nam id incidunt ad facere. Architecto
+                        repudiandae nostrum dolores at. Soluta aspernatur quisquam molestiae ipsam dolore nisi
+                        inventore.
+                    </p>
+                </div>
             </div>
+
         </section>
 
 
