--- a/index.html
+++ b/index.html
@@ -13,51 +13,63 @@
     <title>Tom Ruff Portfolio</title>
 </head>
 
-<body style="background-image: url('assets/images/white-painted-wall-1939485.jpg');">
-    <div class="container-fluid">
-        <!-- Nav section -->
-        <div class="row justify-content-center ">
-
-            <nav class="navbar col-md-8 p-3 border bg-light">
-
-                <h1 class="navbar-brand p-3 mb-2 bg-info text-white">Tom Ruff</h1>
-                <ul class="nav justify-content-end">
-                    <li class="nav-item"><a class="nav-link" href="#">About Me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
-                </ul>
-            </nav>
+<body>
+    <!-- Header section -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Tom Ruff</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end myNav" id="navbarNav">
+            <ul class="navbar-nav myNavUl">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+            </ul>
         </div>
+    </nav>
 
-        <!-- main landing or jumbotron -->
-        <section class=" row justify-content-center" style="margin-top: 50px;">
-            <div class="jumbotron col-md-8 ">
-                <h1 class="title">About Me</h1>
-                <div class="about-me d-flex">
-                    <img src="/assets/images/me.jpg" alt="picture of Tom">
-                    <p class="about-me-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-                        numquam necessitatibus at
-                        qui
-                        ipsam harum, adipisci dolor a, debitis nisi saepe ipsum corporis aut quidem excepturi voluptatem
-                        quibusdam ea ex! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laudantium
-                        illo, itaque officiis soluta aliquam atque error alias provident nobis temporibus facilis
-                        explicabo
-                        odit veritatis minima doloribus voluptatum, voluptatem recusandae. Lorem ipsum dolor sit amet,
-                        consectetur adipisicing elit. Quisquam libero quia quis nam id incidunt ad facere. Architecto
-                        repudiandae nostrum dolores at. Soluta aspernatur quisquam molestiae ipsam dolore nisi
-                        inventore.
-                    </p>
+    <!-- middle section -->
+    <div class="container">
+
+        <div class="row">
+            <div class="jumbotron col-md-10 midsec">
+                <h1 class="title">Tom Ruff</h1>
+                <div class="contentAboutMe">
+                    <img src="/assets/images/me.jpg" alt="photo of Tom Ruff">
+                    <p class="aboutMe"> My name is Tom Ruff, this is my portfolio. I am currently a full-time student at
+                        the U of U learning full-stack web development. This site is actually a project that I am
+                        working on at the moment and need to finish before Saturday the 16th. I moved to Utah about 2
+                        years ago now and have been working as a graphic designer for a sign company. Right now I have
+                        committed to being a full-time student so I can fully immerse myself into learning this
+                        material. I have a certificate in front end web development from CodeCademy back in 2018 but
+                        wanted to take my learning to a much bigger scale. I have a huge passion for building sites and
+                        learning about front and back end development. It is super fun and exciting when you learn
+                        something new and are able to implement it to your project. I am super excited to get more
+                        in-depth with back-end web development since that it was pretty difficult for me when I was
+                        taking
+                        the CodeCademy course. Some little things about me, I grew up in Illinois, have been
+                        skateboarding since I was 2 years old and love all outdoors stuff and the casual video games.
+                        Ever since moving to Utah I have started to mountain bike and will be snowboarding a ton this
+                        year at snowbird. I love to build things mostly with wood but also like to weld and make gifts
+                        for friends. Thank you to whoever has read this and hope this gave you a little picture of who I
+                        am and what I like to do. </p>
                 </div>
             </div>
 
-        </section>
-
-
-        <!-- Footer section -->
-        <footer class="footer">
-            <p>© copyright</p>
-        </footer>
+        </div>
     </div>
+
+    <!-- footer section -->
+
+
 
 
 
