added images and more bootstrap i think im doing this right. right now im not a fan

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Header section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Tom Ruff</a>
+        <a class="navbar-brand navName" href="index.html">Tom Ruff</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,12 +39,14 @@
     <!-- middle section -->
     <div class="container">
 
-        <div class="row">
-            <div class="jumbotron col-md-10 midsec">
+        <div class="row justify-content-center landing">
+            <div class="midsec">
                 <h1 class="title">Tom Ruff</h1>
-                <div class="contentAboutMe">
-                    <img src="/assets/images/me.jpg" alt="photo of Tom Ruff">
-                    <p class="aboutMe"> My name is Tom Ruff, this is my portfolio. I am currently a full-time student at
+                <div class="contentAboutMe ">
+                    <img class="imageMe float-md-left" src="/assets/images/me.jpg" alt="photo of Tom Ruff">
+                    <p class="aboutMe "> My name is Tom Ruff, this is my portfolio. I am currently a
+                        full-time
+                        student at
                         the U of U learning full-stack web development. This site is actually a project that I am
                         working on at the moment and need to finish before Saturday the 16th. I moved to Utah about 2
                         years ago now and have been working as a graphic designer for a sign company. Right now I have
@@ -63,12 +65,15 @@
                         am and what I like to do. </p>
                 </div>
             </div>
-
         </div>
     </div>
 
     <!-- footer section -->
-
+    <div class="row navbar sticky-bottom text-center ">
+        <div class=" col-md-12 foot justify-content-center">
+            <p>© copyright</p>
+        </div>
+    </div>
 
 
 
