--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="/assets/styles/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/styles/style.css">
+
     <title>Contact RWD</title>
 </head>
 
@@ -16,17 +18,17 @@
 
     <!-- Header section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Tom Ruff</a>
+        <a class="navbar-brand navName" href="index.html">Tom Ruff</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end myNav" id="navbarNav">
             <ul class="navbar-nav myNavUl">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
@@ -36,46 +38,42 @@
         </div>
     </nav>
 
-    <!-- Contact form -->
-
-
-
-
     <!-- Form for sending email -->
-    <section class="main-sec">
+    <div class="container">
+        <form class="midsec">
+            <h1 class="title">Contact Me</h1>
+            <div class="form-group row">
+                <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Full Name</label>
+                <div class="col-sm-10">
+                    <input type="full name" class="form-control form-control-sm" id="colFormLabelSm"
+                        placeholder="John Doe">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm"
+                        placeholder="Johndoe@gmail.com">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Enter Text</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control form-control-sm" cols="30" rows="10"></textarea>
+                </div>
+            </div>
+        </form>
+    </div>
 
-        <div class="inside-sec">
 
-            <h2 class="title">Contact</h2>
 
-            <div class="form"></div>
 
-            <p class="enter name">Name</p>
-
-            <input class="input in-name" type="text" name="name" placeholder="John Smith">
-
-            <p class="enter email">Email</p>
-
-            <input class="input in-email" type="text" name="name" placeholder="example@gmail.com">
-
-            <p class="enter text">Message</p>
-
-            <textarea class="input in-text"></textarea> <br>
-
-            <button class="button" type="submit">Submit</button>
-
+    <!-- footer section -->
+    <div class="row navbar sticky-bottom text-center ">
+        <div class=" col-md-12 foot justify-content-center">
+            <p>© copyright</p>
         </div>
-
-        </div>
-
-    </section>
-
-
-
-    <!-- Starting footer section -->
-    <footer class="footer">
-        <p class="copyright"> © copyright</p>
-    </footer>
+    </div>
 
 </body>
 
