--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="/assets/styles/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/styles/style.css">
+
     <title>RWD Gallery</title>
 </head>
 
@@ -16,20 +18,20 @@
 
     <!-- Header section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Tom Ruff</a>
+        <a class="navbar-brand navName" href="index.html">Tom Ruff</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end myNav" id="navbarNav">
             <ul class="navbar-nav myNavUl">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
             </ul>
@@ -37,7 +39,32 @@
     </nav>
 
     <!-- Image gallery section -->
-    <section class="main-sec">
+    <div class="container">
+        <div class="row midsec">
+            <div class=" col-sm-12 col-md-3 col-lg-2 img imgOne">
+                <p class="imgTitle">Title</p>
+            </div>
+
+            <div class="col-sm-12 col-md-3 col-lg-2 img imgTwo">
+                <p class="imgTitle">Title</p>
+            </div>
+
+            <div class="col-sm-12 col-md-3 col-lg-2 img imgThree">
+                <p class="imgTitle">Title</p>
+            </div>
+
+            <div class="col-sm-12 col-md-3 col-lg-2 img imgFour">
+                <p class="imgTitle">Title</p>
+            </div>
+
+            <div class="col-sm-12 col-md-3 col-lg-2 img imgFive">
+                <p class="imgTitle">Title</p>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- <section class="main-sec">
         <div class="inside-sec">
             <h2 class="title">Gallery</h2>
 
@@ -65,14 +92,16 @@
 
             </div>
 
-        </div>
+        </div> -->
 
     </section>
 
-    <!-- Starting footer section -->
-    <footer class="footer">
-        <p class="copyright"> © copyright</p>
-    </footer>
+    <!-- footer section -->
+    <div class="row navbar sticky-bottom text-center ">
+        <div class=" col-md-12 foot justify-content-center">
+            <p>© copyright</p>
+        </div>
+    </div>
 
 </body>
 
