--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/styles/style.css">
+    <link
+        href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900|Muli:300,400,500,700&display=swap"
+        rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/images/ruff-wd-favcon.png" type="image/png">
 
     <title>Tom Ruff Portfolio</title>
 </head>
@@ -16,7 +20,7 @@
 <body>
     <!-- Header section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand navName" href="index.html">Tom Ruff</a>
+        <a class="navbar-brand navName" href="index.html">RWD</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,9 +46,9 @@
         <div class="row justify-content-center landing">
             <div class="midsec">
                 <h1 class="title">Tom Ruff</h1>
-                <div class="contentAboutMe ">
-                    <img class="imageMe float-md-left" src="/assets/images/me.jpg" alt="photo of Tom Ruff">
-                    <p class="aboutMe "> My name is Tom Ruff, this is my portfolio. I am currently a
+                <div class="contentAboutMe">
+                    <img class="imageMe float-sm-left" src="/assets/images/me.jpg" alt="photo of Tom Ruff">
+                    <p class="aboutMe"> My name is Tom Ruff, this is my portfolio. I am currently a
                         full-time
                         student at
                         the U of U learning full-stack web development. This site is actually a project that I am
@@ -69,31 +73,11 @@
     </div>
 
     <!-- footer section -->
-    <div class="row navbar sticky-bottom text-center ">
+    <div class="row navbar sticky-bottom text-center footer">
         <div class=" col-md-12 foot justify-content-center">
             <p>© copyright</p>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
