--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/styles/style.css">
+    <link
+        href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900|Muli:300,400,500,700&display=swap"
+        rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/images/ruff-wd-favcon.png" type="image/png">
 
     <title>RWD Gallery</title>
 </head>
@@ -18,7 +22,7 @@
 
     <!-- Header section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand navName" href="index.html">Tom Ruff</a>
+        <a class="navbar-brand navName" href="index.html">RWD</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,13 +30,13 @@
         <div class="collapse navbar-collapse justify-content-end myNav" id="navbarNav">
             <ul class="navbar-nav myNavUl">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
@@ -41,25 +45,29 @@
     <!-- Image gallery section -->
     <div class="container">
         <div class="row midsec">
-            <div class=" col-sm-12 col-md-3 col-lg-2 img imgOne">
-                <p class="imgTitle">Title</p>
+            <h1 class="title">Portfolio</h1>
+            <div class="galContent">
+                <div class=" col-sm-12 col-md-3 col-lg-2 img imgOne">
+                    <p class="imgTitle">Title</p>
+                </div>
+
+                <div class="col-sm-12 col-md-3 col-lg-2 img imgTwo">
+                    <p class="imgTitle">Title</p>
+                </div>
+
+                <div class="col-sm-12 col-md-3 col-lg-2 img imgThree">
+                    <p class="imgTitle">Title</p>
+                </div>
+
+                <div class="col-sm-12 col-md-3 col-lg-2 img imgFour">
+                    <p class="imgTitle">Title</p>
+                </div>
+
+                <div class="col-sm-12 col-md-3 col-lg-2 img imgFive">
+                    <p class="imgTitle">Title</p>
+                </div>
             </div>
 
-            <div class="col-sm-12 col-md-3 col-lg-2 img imgTwo">
-                <p class="imgTitle">Title</p>
-            </div>
-
-            <div class="col-sm-12 col-md-3 col-lg-2 img imgThree">
-                <p class="imgTitle">Title</p>
-            </div>
-
-            <div class="col-sm-12 col-md-3 col-lg-2 img imgFour">
-                <p class="imgTitle">Title</p>
-            </div>
-
-            <div class="col-sm-12 col-md-3 col-lg-2 img imgFive">
-                <p class="imgTitle">Title</p>
-            </div>
 
         </div>
     </div>
@@ -97,11 +105,20 @@
     </section>
 
     <!-- footer section -->
-    <div class="row navbar sticky-bottom text-center ">
+    <div class="row navbar sticky-bottom text-center footer">
         <div class=" col-md-12 foot justify-content-center">
             <p>© copyright</p>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 
