--- a/portfolio.html
+++ b/portfolio.html
@@ -47,23 +47,23 @@
         <div class="row midsec">
             <h1 class="title">Portfolio</h1>
             <div class="galContent">
-                <div class=" col-sm-12 col-md-3 col-lg-2 img imgOne">
+                <div class=" col-md-3 col-lg-2 img imgOne">
                     <p class="imgTitle">Title</p>
                 </div>
 
-                <div class="col-sm-12 col-md-3 col-lg-2 img imgTwo">
+                <div class=" col-md-3 col-lg-2 img imgTwo">
                     <p class="imgTitle">Title</p>
                 </div>
 
-                <div class="col-sm-12 col-md-3 col-lg-2 img imgThree">
+                <div class=" col-md-3 col-lg-2 img imgThree">
                     <p class="imgTitle">Title</p>
                 </div>
 
-                <div class="col-sm-12 col-md-3 col-lg-2 img imgFour">
+                <div class=" col-md-3 col-lg-2 img imgFour">
                     <p class="imgTitle">Title</p>
                 </div>
 
-                <div class="col-sm-12 col-md-3 col-lg-2 img imgFive">
+                <div class=" col-md-3 col-lg-2 img imgFive">
                     <p class="imgTitle">Title</p>
                 </div>
             </div>
@@ -72,35 +72,7 @@
         </div>
     </div>
 
-    <!-- <section class="main-sec">
-        <div class="inside-sec">
-            <h2 class="title">Gallery</h2>
 
-            <div class="gallery">
-
-                <div class="gal gal-1">
-                    <p class="image-text">My Portfolio</p>
-                </div>
-
-                <div class="gal gal-2">
-                    <p class="image-text">Week 2</p>
-                </div>
-
-                <div class="gal gal-3">
-                    <p class="image-text">Week 3</p>
-                </div>
-
-                <div class="gal gal-4">
-                    <p class="image-text">Week 4</p>
-                </div>
-
-                <div class="gal gal-5">
-                    <p class="image-text">Week 5</p>
-                </div>
-
-            </div>
-
-        </div> -->
 
     </section>
 
