--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900|Muli:300,400,500,700&display=swap"
         rel="stylesheet">
-    <link rel="shortcut icon" href="./assets/images/ruff-wd-favcon.png" type="image/png">
+    <link rel="shortcut icon" href="/assets/images/ruff-wd-favcon.png" type="image/png">
 
     <title>RWD Gallery</title>
 </head>
