changed path to images to see if it will load on github io

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="midsec">
                 <h1 class="title">Tom Ruff</h1>
                 <div class="contentAboutMe">
-                    <img class="imageMe float-sm-left" src="/assets/images/me.jpg" alt="photo of Tom Ruff">
+                    <img class="imageMe float-sm-left" src="assets/images/me.jpg" alt="photo of Tom Ruff">
                     <p class="aboutMe"> My name is Tom Ruff, this is my portfolio. I am currently a
                         full-time
                         student at
