--- a/portfolio.html
+++ b/portfolio.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="/assets/styles/reset.css">
+    <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <link
         href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900|Muli:300,400,500,700&display=swap"
         rel="stylesheet">
-    <link rel="shortcut icon" href="/assets/images/ruff-wd-favcon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/images/ruff-wd-favcon.png" type="image/png">
 
     <title>RWD Gallery</title>
 </head>
