--- a/portfolio.html
+++ b/portfolio.html
@@ -48,23 +48,23 @@
             <h1 class="title">Portfolio</h1>
             <div class="galContent">
                 <div class=" col-md-3 col-lg-2 img imgOne">
-                    <p class="imgTitle">Title</p>
+                    <p class="imgTitle">Project One</p>
                 </div>
 
                 <div class=" col-md-3 col-lg-2 img imgTwo">
-                    <p class="imgTitle">Title</p>
+                    <p class="imgTitle">Project Two</p>
                 </div>
 
                 <div class=" col-md-3 col-lg-2 img imgThree">
-                    <p class="imgTitle">Title</p>
+                    <p class="imgTitle">Project Three</p>
                 </div>
 
                 <div class=" col-md-3 col-lg-2 img imgFour">
-                    <p class="imgTitle">Title</p>
+                    <p class="imgTitle">Project Four</p>
                 </div>
 
                 <div class=" col-md-3 col-lg-2 img imgFive">
-                    <p class="imgTitle">Title</p>
+                    <p class="imgTitle">Project Five</p>
                 </div>
             </div>
 
