--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,7 @@
             <div class="form-group row">
                 <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Full Name</label>
                 <div class="col-sm-10">
-                    <input type="full name" class="form-control form-control-sm" id="colFormLabelSm"
-                        placeholder="John Doe">
+                    <input type="text" class="form-control form-control-sm" id="colFormLabelSm" placeholder="John Doe">
                 </div>
             </div>
             <div class="form-group row">
@@ -64,7 +63,9 @@
                 <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Enter Text</label>
                 <div class="col-sm-10">
                     <textarea class="form-control form-control-sm" cols="30" rows="10"></textarea>
+                    <button class='btn btn-primary' type="submit" style="margin-top: 10px;">Send</button>
                 </div>
+
             </div>
         </form>
     </div>
