commiting styles and password generator

--- a/passwordIndex.html
+++ b/passwordIndex.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="assets/images/ruff-wd-favcon.png" type="image/png">
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="/assets/styles/passwordStyle.css">
+    <link rel="stylesheet" href="/assets/passwordStyle.css">
     <!-- End styles -->
     <title>Password Generator</title>
 </head>
