--- a/portfolio.html
+++ b/portfolio.html
@@ -47,25 +47,26 @@
         <div class="row midsec">
             <h1 class="title">Portfolio</h1>
             <div class="galContent">
-                <div class=" col-md-3 col-lg-2 img imgOne">
-                    <p class="imgTitle">Project One</p>
-                </div>
+                <a class="linkProject imgOne img col-md-3 col-lg-2" href="/passwordIndex.html">
+                    <p class="imgTitle">Password Generator</p>
+                </a>
 
-                <div class=" col-md-3 col-lg-2 img imgTwo">
+                <a href="#" class=" col-md-3 col-lg-2 img imgTwo">
                     <p class="imgTitle">Project Two</p>
-                </div>
+                </a>
 
-                <div class=" col-md-3 col-lg-2 img imgThree">
+                <a href="#" class=" col-md-3 col-lg-2 img imgThree">
                     <p class="imgTitle">Project Three</p>
-                </div>
+                </a>
 
-                <div class=" col-md-3 col-lg-2 img imgFour">
+                <a href="#" class=" col-md-3 col-lg-2 img imgFour">
                     <p class="imgTitle">Project Four</p>
-                </div>
+                </a>
 
-                <div class=" col-md-3 col-lg-2 img imgFive">
+                <a href="#" class=" col-md-3 col-lg-2 img imgFive">
                     <p class="imgTitle">Project Five</p>
-                </div>
+                </a>
+
             </div>
 
 
