--- a/portfolio.html
+++ b/portfolio.html
@@ -47,23 +47,49 @@
         <div class="row midsec">
             <h1 class="title">Portfolio</h1>
             <div class="galContent">
-                <a class="linkProject imgOne img col-md-3 col-lg-2" href="/passwordIndex.html">
+
+                <a class="linkProject imgOne img col-md-3 col-lg-2" href="passwordIndex.html">
+                    <div class="overlay">
+                        <div class="overlayBox">
+                            <p class="overlayText">Click to View</p>
+                        </div>
+                    </div>
                     <p class="imgTitle">Password Generator</p>
                 </a>
 
                 <a href="#" class=" col-md-3 col-lg-2 img imgTwo">
+                    <div class="overlay">
+                        <div class="overlayBox">
+                            <p class="overlayText">Click to View</p>
+                        </div>
+                    </div>
                     <p class="imgTitle">Project Two</p>
                 </a>
 
                 <a href="#" class=" col-md-3 col-lg-2 img imgThree">
+                    <div class="overlay">
+                        <div class="overlayBox">
+                            <p class="overlayText">Click to View</p>
+                        </div>
+                    </div>
                     <p class="imgTitle">Project Three</p>
                 </a>
 
                 <a href="#" class=" col-md-3 col-lg-2 img imgFour">
+                    <div class="overlay">
+                        <div class="overlayBox">
+                            <p class="overlayText">Click to View</p>
+                        </div>
+                    </div>
                     <p class="imgTitle">Project Four</p>
                 </a>
 
                 <a href="#" class=" col-md-3 col-lg-2 img imgFive">
+                    <div class="overlay">
+                        <div class="overlayBox">
+                            <p class="overlayText">Click to View</p>
+                        </div>
+                    </div>
                     <p class="imgTitle">Project Five</p>
                 </a>
 
