--- a/passwordIndex.html
+++ b/passwordIndex.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="assets/images/ruff-wd-favcon.png" type="image/png">
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="/assets/passwordStyle.css">
+    <link rel="stylesheet" href="assets/passwordStyle.css">
     <!-- End styles -->
     <title>Password Generator</title>
 </head>
@@ -99,7 +99,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="/code.js"></script>
+    <script src="code.js"></script>
 
 </body>
 
