--- a/portfolio.html
+++ b/portfolio.html
@@ -57,13 +57,13 @@
                     <p class="imgTitle">Password Generator</p>
                 </a>
 
-                <a href="#" class=" col-md-3 col-lg-2 img imgTwo">
+                <a href="quizIndex.html" class=" col-md-3 col-lg-2 img imgTwo">
                     <div class="overlay">
                         <div class="overlayBox">
                             <p class="overlayText">Click to View</p>
                         </div>
                     </div>
-                    <p class="imgTitle">Project Two</p>
+                    <p class="imgTitle">Code Quiz!</p>
                 </a>
 
                 <a href="#" class=" col-md-3 col-lg-2 img imgThree">
